--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.12.2",
+    "@supabase/supabase-js": "^2.46.1",
     "nuxt": "^3.13.2",
     "sass": "^1.80.5",
     "vue": "latest",
